--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "src/hooks/axiosInstance.tsx", "src/hooks/ProtectedRoutes.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
