--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,19 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.4.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.1",
-    "serverless-http": "^3.2.0"
+    "qs": "^6.12.1",
+    "serverless-http": "^3.2.0",
+    "validator": "^13.12.0"
   }
 }
