--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "app.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js",
+            "dest": "app.js",
             "headers": {
                 "Access-Control-Allow-Origin": "https://user-auth-frontend-teal.vercel.app",
                 "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
